# MediaServerSpeaker_ConfData

./: CMakeLists.txt  README.md
include/ConfData/: AuthData.hpp  Events.hpp
src/: Events.cpp
